cocoa: allow space to activate tabs and refactor tab keypress handling

This change:
1. Binds space on a tab to "activate this tab";
2. Moves event handling from keyDown to keyUp;
3. Passes events up to the superclass when not handled

Bug: 702735
Change-Id: I44e2278d93603de664fbae2d6a2c980262130c8f